Update import paths and class names

--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -1,12 +1,12 @@
 ---
-import BentoItem from "./BentoItem.astro";
+import BentoItem from "@components/BentoItem.astro";
 ---
 
 <section
-  class="w-full max-w-[1400px] grid grid-cols-10 auto-rows-[30rem] gap-4 mx-auto p-20"
+  class="w-full max-w-[1400px] grid lg:grid-cols-10 auto-rows-[30rem] gap-4 mx-auto p-6 md:p-12 lg:p-20"
 >
   <BentoItem
-    class="col-span-10 md:col-span-4 overflow-hidden"
+    class="col-span-10 lg:col-span-4 overflow-hidden"
     title="ANDORRA: EL CÉNIT DE LOS PREMIOS ESLAND"
   >
     <div
@@ -27,7 +27,7 @@ import BentoItem from "./BentoItem.astro";
     </p>
   </BentoItem>
   <BentoItem
-    class="col-span-10 md:col-span-6 overflow-hidden"
+    class="col-span-10 lg:col-span-6 overflow-hidden"
     title="LA ALFOMBRA BLANCA"
     subtitle="16 de febrero de 2024"
   >
@@ -51,7 +51,7 @@ import BentoItem from "./BentoItem.astro";
     </p>
   </BentoItem>
   <BentoItem
-    class="col-span-10 md:col-span-6 overflow-hidden"
+    class="col-span-10 lg:col-span-6 overflow-hidden"
     title="LA GALA"
     subtitle="17 de febrero de 2024"
   >
@@ -74,7 +74,7 @@ import BentoItem from "./BentoItem.astro";
     </p>
   </BentoItem>
   <BentoItem
-    class="col-span-10 md:col-span-4 overflow-hidden"
+    class="col-span-10 lg:col-span-4 overflow-hidden"
     title="DISFRUTA DEL REDDIT DE LA COMUNIDAD"
   >
     <div
