--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,6 +1,8 @@
 <svg
   {...Astro.props}
   viewBox="0 0 160 200"
+  width="160"
+  height="70"
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
 >
