Add new files and update image URL in Bento component

--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -62,7 +62,7 @@ import BentoItem from "@components/BentoItem.astro";
         h-full group-hover:scale-110 transition-scale
         duration-1000 ease-in-out opacity-90 bg-blend-luminosity bg-center
         bg-cover bg-no-repeat bg-blue-800 -z-10"
-      style="background-image: url('/gref.webp')"
+      style="background-image: url('/pistas.webp')"
     >
     </div>
     <p slot="content" class="max-w-xl">
