Update styles and layout in various components

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -2,7 +2,9 @@
 import Logo from "@components/Logo.astro";
 ---
 
-<section class="text-xl text-left px-20 max-w-[70ch] text-pretty mx-auto my-24">
+<section
+  class="text-xl text-left px-6 sm:px-20 max-w-[70ch] text-pretty mx-auto my-24"
+>
   <Logo class="m-auto mb-10 h-auto w-16 text-white" />
 
   <h1
