--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,6 +1,6 @@
-<div class="w-full relative">
+<div class="w-full relative h-screen lg:h-full md:aspect-video">
   <img
-    class="absolute top-10 z-10 w-[1000px] left-0 right-0 m-auto"
+    class="absolute w-[1000px] [inset:0] z-10 m-auto"
     alt="Esland - Premios a la comunidad hispanohablante de Streaming"
     src="/logo-home.svg"
   />
