--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -19,7 +19,7 @@ import BentoItem from "@components/BentoItem.astro";
       style="background-image: url('/mountain.webp')"
     >
     </div>
-    <p slot="content" class="max-w-xl">
+    <p slot="content" class="text-base md:text-lg max-w-xl">
       Una nueva edición <strong>cargada de novedades</strong> y contenido, que empezará
       varias semanas antes de la ansiada gala. <strong
         >Directos especiales, colaboraciones, conciertos y mucho más</strong
@@ -41,7 +41,7 @@ import BentoItem from "@components/BentoItem.astro";
       style="background-image: url('/gref.webp')"
     >
     </div>
-    <p slot="content" class="max-w-xl">
+    <p slot="content" class="text-base md:text-lg max-w-xl">
       La alfombra blanca de los premios ESLAND es el evento previo a la gala
       donde los <strong
         >nominados y los invitados desfilan por la alfombra roja.</strong
@@ -65,7 +65,7 @@ import BentoItem from "@components/BentoItem.astro";
       style="background-image: url('/pistas.webp')"
     >
     </div>
-    <p slot="content" class="max-w-xl">
+    <p slot="content" class="text-base md:text-lg max-w-xl">
       La gala de los premios ESLAND es el evento principal de la noche. En ella
       se entregarán los premios a los <strong
         >ganadores de las diferentes categorías.</strong
@@ -87,7 +87,7 @@ import BentoItem from "@components/BentoItem.astro";
       style="background-image: url('/laptop.webp')"
     >
     </div>
-    <p slot="content" class="max-w-xl">
+    <p slot="content" class="text-base md:text-lg max-w-xl">
       Únete a la comunidad de los premios ESLAND en Reddit. Comparte tus
       opiniones, tus favoritos y tus apuestas para los premios. <strong
         >¡Y no te pierdas las sorpresas que tenemos preparadas!</strong
