--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,24 +2,26 @@
 import Logo from "@components/Logo.astro";
 ---
 
-<header id="header-nav" class="fixed w-screen py-3 z-50 top-0 px-8 lg:px-0">
-  <div class="grid grid-cols-3 max-w-7xl mx-auto items-center justify-between">
+<header id="header-nav" class="fixed w-screen z-50 top-0 lg:px-0">
+  <div
+    class="grid [grid-template-columns:40px_repeat(2,1fr)] sm:grid-cols-3 max-w-7xl mx-auto p-1 items-center justify-between"
+  >
     <a href="/" class="col-span-1">
       <Logo class="w-28 h-auto" />
     </a>
-    <nav class="col-span-1 justify-self-center">
+    <nav class="col-span-1 w-full flex gap-2 justify-end md:justify-center">
       <ul class="flex gap-4">
         <li>
-          <a class="hover:underline" href="#">INFO</a>
+          <a class="text__glowing" href="#">INFO</a>
         </li>
         <li>
-          <a class="hover:underline" href="#">ARCHIVO</a>
+          <a class="text__glowing" href="#">ARCHIVO</a>
         </li>
       </ul>
     </nav>
     <a
       href="#"
-      class="border rounded-full inline-block border-white px-4 py-2 justify-self-end hover:bg-white hover:text-black duration-300"
+      class="border text-xs md:text-base rounded-full inline-block border-white px-2 py-2 justify-self-end hover:bg-white hover:text-black duration-300"
     >
       ESLAND: EL DOCUMENTAL
     </a>
