--- a/src/components/PreFooter.astro
+++ b/src/components/PreFooter.astro
@@ -1,6 +1,6 @@
-<section class="w-full p-20 max-w-[1400px] mx-auto">
+<section class="w-full p-6 sm:p-20 max-w-[1400px] mx-auto">
   <h3
-    class="uppercase text-4xl text-center font-semibold mb-10 text-balance mx-auto tracking-wide"
+    class="uppercase text-xl md:text-4xl tracking-wide text-center font-semibold mb-10 text-balance mx-auto"
   >
     Guía de la 3ª Edición de los premios ESLAND
   </h3>
