--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -9,7 +9,7 @@ import Footer from "../components/Footer.astro";
 import { getI18N } from "../i18n/index.ts";
 
 const { currentLocale } = Astro;
-const i18n = getI18N({ currentLocale });
+const i18n = getI18N({ currentLocale })!;
 ---
 
 <Layout title={i18n?.SEO_TITLE || ""} description={i18n?.SEO_DESCRIPTION || ""}>
