--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import Logo from "./Logo.astro";
 import { getI18N } from "../i18n/";
 
 const { currentLocale } = Astro;
-const i18n = getI18N({ currentLocale });
+const i18n = getI18N({ currentLocale })!;
 ---
 
 <footer class="bg-black/40 mt-24">
