--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,29 +1,28 @@
 ---
 import Logo from "@components/Logo.astro";
+import { getI18N } from "../i18n/";
+import Button from "@components/Button.astro";
+
+const { currentLocale } = Astro;
+const i18n = getI18N({ currentLocale })!;
 ---
 
-<header id="header-nav" class="fixed w-screen z-50 top-0 lg:px-0">
+<header id="header-nav" class="fixed w-full z-50 top-0 px-6">
   <div
-    class="grid [grid-template-columns:40px_repeat(2,1fr)] sm:grid-cols-3 max-w-7xl mx-auto p-1 items-center justify-between"
+    class="grid [grid-template-columns:40px_repeat(2,1fr)] sm:grid-cols-3 max-w-7xl mx-auto py-1 items-center justify-between"
   >
     <a href="/" class="col-span-1">
-      <Logo class="w-28 h-auto" />
+      <Logo class="w-10 h-auto" />
     </a>
     <nav class="col-span-1 w-full flex gap-2 justify-end md:justify-center">
-      <ul class="flex gap-4">
-        <li>
-          <a class="text__glowing" href="#">INFO</a>
-        </li>
-        <li>
-          <a class="text__glowing" href="#">ARCHIVO</a>
-        </li>
-      </ul>
+      <a class="hover:underline" href="/info">{i18n.HEADER_1}</a>
+      <a class="hover:underline" href="/archivo">{i18n.HEADER_2}</a>
     </nav>
-    <a
-      href="#"
-      class="border text-xs md:text-base rounded-full inline-block border-white px-2 py-2 justify-self-end hover:bg-white hover:text-black duration-300"
+    <Button
+      class="justify-self-end lg:text-base"
+      url="https://www.youtube.com/watch?v=O43x26hiolw"
     >
-      ESLAND: EL DOCUMENTAL
-    </a>
+      {i18n.HEADER_BUTTON}
+    </Button>
   </div>
 </header>
