--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,9 +1,20 @@
+---
+import { getI18N } from "../i18n/";
+import Button from "@components/Button.astro";
+
+const { currentLocale } = Astro;
+const i18n = getI18N({ currentLocale })!;
+---
+
 <div class="w-full relative h-screen lg:h-full md:aspect-video">
-  <img
-    class="absolute w-[1000px] [inset:0] z-10 m-auto"
-    alt="Esland - Premios a la comunidad hispanohablante de Streaming"
-    src="/logo-home.svg"
-  />
+  <div
+    class="absolute z-10 top-14 left-1/2 -translate-x-1/2 right-0 m-auto flex items-center flex-col"
+  >
+    <img alt={i18n.VIDEO_ALT} src="/logo-home.svg" />
+    <Button url="https://www.youtube.com/watch?v=1YmpPrqKP-g">
+      {i18n.VIDEO_BUTTON}
+    </Button>
+  </div>
   <video
     class="w-full h-screen object-cover object-top animate-fade animate-duration-1000 animate-ease-in-out"
     src="/video.mp4"
