--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,18 +11,19 @@ const i18n = getI18N({ currentLocale })!;
   <div
     class="grid [grid-template-columns:40px_repeat(2,1fr)] sm:grid-cols-3 max-w-7xl mx-auto py-1 items-center justify-between"
   >
-    <a href="/" class="col-span-1">
+    <a href="/" class="col-span-1 w-fit">
       <Logo class="w-10 h-auto" />
     </a>
     <nav class="col-span-1 w-full flex gap-2 justify-end md:justify-center">
       <a class="hover:underline" href="/info">{i18n.HEADER_1}</a>
       <a class="hover:underline" href="/archivo">{i18n.HEADER_2}</a>
     </nav>
-    <Button
-      class="justify-self-end lg:text-base"
-      url="https://www.youtube.com/watch?v=O43x26hiolw"
+    <a
+      href="#"
+      class="border text-xs md:text-base rounded-full inline-block border-white px-2 py-2 justify-self-end hover:bg-white hover:text-black duration-300"
+      class="ml-2 border text-xs text-center md:text-base rounded-full inline-block border-white px-2 py-2 justify-self-end hover:bg-white hover:text-black duration-300"
     >
       {i18n.HEADER_BUTTON}
-    </Button>
+    </a>
   </div>
 </header>
